--- a/tab-animation.html
+++ b/tab-animation.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <style type="text/css">
-        code { background-color: gray; color: blue; }
+        code { background-color: rgb(52, 65, 85); color: rgb(48, 32, 192); }
         </style>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
