--- a/tab-animation.html
+++ b/tab-animation.html
@@ -12,7 +12,7 @@
         </script>
     </head>
     <body>
-        <input id="animation-name" type="text" placeholder="Animation name" value="" onkeyup="this.value = this.value.toLowerCase();">
+        <input id="animation-name" type="text" placeholder="Animation name" value="" onchange="this.value = this.value.toLowerCase();">
         <code type="yaml">import io.reliances.*;</code>
     </body>
 </html>
