--- a/tab-animation.html
+++ b/tab-animation.html
@@ -2,17 +2,78 @@
 <html>
     <head>
         <style type="text/css">
-        code { background-color: rgb(52, 65, 85); color: rgb(48, 32, 192); }
+       code {
+  font-family: monospace;
+  color: crimson;
+  background-color: #f1f1f1;
+  padding: 2px;
+  font-size: 105%;
+}
         </style>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
         <script type="text/javascript">
-        
+        function trim(s) { return (s.charAt(0) == '#') ? s.substring(1, 7) : s }
+
+        function convertToHex(rgb) {
+            return hex(rgb[0]) + hex(rgb[1]) + hex(rgb[2]);
+          }
+
+        function convertToRGB(hex) {
+            var color = [];
+            color[0] = parseInt ((trim(hex)).substring (0, 2), 16);
+            color[1] = parseInt ((trim(hex)).substring (2, 4), 16);
+            color[2] = parseInt ((trim(hex)).substring (4, 6), 16);
+            return color;
+          }
+
+          function createYaml() {   
+            const name = document.getElementById("animation-name").value;
+            const text = document.getElementById("text").value;
+            const from = document.getElementById("color1").value;
+            const to = document.getElementById("color2").value;
+
+            let scale = chroma.scale([from, to]);
+        let length = parseInt(text.split("").length);
+        let obj = [];
+
+        for (let i = 1; i < length + 1; i++) {
+            let ts = 1 / length * i;
+            obj.push(scale(ts).hex());
+        }
+            let nickCmd = [];
+
+            for (let x = 0; x < length; x++) { nickCmd.push(obj[x] + text.charAt(x)); }
+
+                let h = 0;
+                let desc = "  name:<br>    change-interval: 100<br>    texts:<br>        ";
+                desc += ("- \"{" + from + ">}" + text + "{" + obj[0] + "<}\"<br>");
+                for (let i = 1; i<length; i++) {
+                    h = i - 1;
+                    desc += ("        - \"{" + obj[h] + ">}" + text + "{" + obj[i] + "<}\"<br>");
+                }
+                h = 0;
+                j = 0;
+                for (var i = length - 1; i >= 0; i--) {
+                    if (i == 0) {
+                    desc += ("        - \"{" + obj[i] + ">}" + text + "{" + from + "<}\"<br>");
+                    continue;
+                    }
+                    h = i - 1;
+                    desc += ("        - \"{" + obj[i] + ">}" + text + "{" + obj[h] + "<}\"<br>");
+                }
+                document.getElementById("code").innerHTML = desc;
+    }
+
         </script>
     </head>
     <body>
-        <input id="animation-name" type="text" placeholder="Animation name" value="" onchange="this.value = this.value.toLowerCase();">
-        <code type="yaml">import io.reliances.*;</code>
+        <input id="animation-name" type="text" placeholder="Animation name" value="" onkeyup="this.value = this.value.toLowerCase().replace(/[^a-z0-9_-]/g, '');"><br>
+        <input id="text" type="text" placeholder="Text"><br>
+        <input id="color1" type="color" value="#771177"><br>
+        <input id="color2" type="color" value="#710000"><br>
+        <button id="create" onclick="createYaml()">Generate YAML</button><br><br>
+        <code type="yaml" id="code">import io.reliances.*;</code>
     </body>
 </html>
