--- a/tab-animation.html
+++ b/tab-animation.html
@@ -5,10 +5,14 @@
         <style type="text/css">
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
         body {
-            background-color: #8f8f8f;
+            background-color: #000000;
         }
         * {
             font-family: 'Poppins', Helvetica, arial, sans-serif;
+            color: #ffffff
+        }
+        button {
+            color: #000000;
         }
         code {
             font-family: 'consolas';
