changed yaml style

--- a/tab-animation.html
+++ b/tab-animation.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TAB Animated Gradient Generator</title>
+       <title>TAB Animated Gradient Generator</title>
         <style type="text/css">
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-        body {
-            background-color: #000000;
-        }
         * {
             font-family: 'Poppins', Helvetica, arial, sans-serif;
-            color: #ffffff
-        }
-        button {
-            color: #000000;
         }
         code {
             font-family: 'consolas';
@@ -22,7 +15,7 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/styles/default.min.css">
+        <link rel="stylesheet" href="./default.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
         <script type="text/javascript">
         function trim(s) { return (s.charAt(0) == '#') ? s.substring(1, 7) : s }
@@ -39,7 +32,7 @@
             return color;
           }
 
-          function createYaml() {   
+function createYaml() {   
             const name = document.getElementById("animation-name").value || "name";
             const text = document.getElementById("text").value || "Text";
             const from = document.getElementById("color1").value || "#771177";
@@ -80,7 +73,8 @@
                 document.getElementById("placeholder").innerHTML = placeholder;
                 hljs.highlightBlock(document.getElementById("code"))
                 hljs.highlightBlock(document.getElementById("placeholder"))
-    }
+            }
+    
 
         </script>
     </head>
@@ -100,12 +94,14 @@
         <input id="color2" type="color" value="#710000"><br><br>
         <button id="create" onclick="createYaml()" lang="yaml">Generate YAML</button><br><br><br><br><br><br><br><br><br><br>
 
+
+
     </center>
     <div style="padding:2cm; align-items:left;">
         <label>Paste this in your <code>animations.yml</code> file:</label><br>
         <code class="language-yaml" id="code" style="align-content: left"></code><br>
         <label>Use this as a placeholder:</label><br>
-        <code class="language-yaml" id="placeholder" style="align-content: left"></code>
+        <code class="language-yaml" class="style-atom-one-dark" id="placeholder" style="align-content: left"></code>
     </div>
     </body>
 </html>
