fixed color (again lol)

--- a/tab-animation.html
+++ b/tab-animation.html
@@ -7,6 +7,10 @@
         * {
             font-family: 'Poppins', Helvetica, arial, sans-serif;
         }
+        body {
+            background-color: #000000;
+            color: #ffffff;
+        }
         code {
             font-family: 'consolas';
             background-color: #5f5f5f;
