--- a/tab-animation.html
+++ b/tab-animation.html
@@ -4,17 +4,30 @@
        <title>TAB Animated Gradient Generator</title>
         <style type="text/css">
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+        :root {
+    --primary-color: #9A97F3;
+    --secondary-color: #818cab;
+    --font-color: #e1e1ff;
+    --bg-color: #161625;
+    --heading-color: #818cab;
+}
         * {
             font-family: 'Poppins', Helvetica, arial, sans-serif;
         }
         body {
-            background-color: #000000;
-            color: #ffffff;
+            background-color: var(--bg-color);
+            color: var(--font-color);
+            padding: 25px;
         }
         code {
             font-family: 'consolas';
             background-color: #5f5f5f;
         }
+
+.light-mode {
+  background-color: white;
+  color: black;
+}
         </style>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
@@ -22,6 +35,12 @@
         <link rel="stylesheet" href="./default.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
         <script type="text/javascript">
+
+function toggleLightMode() {
+        var element = document.body;
+        element.classList.toggle("light-mode");
+}
+
         function trim(s) { return (s.charAt(0) == '#') ? s.substring(1, 7) : s }
 
         function convertToHex(rgb) {
@@ -86,6 +105,7 @@ function createYaml() {
         <center>
             <h1>TAB Animated Gradient Generator</h1>
             <h2>by <a href="https://github.com/starve-l">reliances</a></h2>
+            <br><br><button onclick="toggleLightMode()">Toggle Light Mode</button><br><br>
         <label>Animation name</label><br>
         <input id="animation-name" type="text" placeholder="Animation name" value="" onkeyup="this.value = this.value.toLowerCase().replace(/[^a-z0-9_-]/g, '');"><br><br>
         <label>Text</label><br>
