--- a/index.html
+++ b/index.html
@@ -1,7 +1,42 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <style>
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color: #dddddd;
+        }
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333;
+        }
+        li {
+            float: left;
+        }
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            transition: 0.3s all ease-in;
+        }
+        li a:hover {
+            background-color: #111;
+            transition: 0.3s all ease-in;
+        }
+        </style>
+    </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#embed">Tab Animated Gradient Generator</a></li>
+        <li><a href="/control-panel/index.html">Gradient Nickname Generator</a></li>
+      </ul>
 </body>
 </html>
