--- a/tab-animation.html
+++ b/tab-animation.html
@@ -5,12 +5,12 @@
         <style type="text/css">
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
         :root {
-    --primary-color: #9A97F3;
-    --secondary-color: #818cab;
-    --font-color: #e1e1ff;
-    --bg-color: #161625;
-    --heading-color: #818cab;
-}
+            --primary-color: #9A97F3;
+            --secondary-color: #818cab;
+            --font-color: #e1e1ff;
+            --bg-color: #161625;
+            --heading-color: #818cab;
+        }
         * {
             font-family: 'Poppins', Helvetica, arial, sans-serif;
         }
@@ -24,10 +24,38 @@
             background-color: #5f5f5f;
         }
 
-.light-mode {
-  background-color: white;
-  color: black;
-}
+        .light-mode {
+            background-color: white;
+            color: black;
+        }
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color: #dddddd;
+        }
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333;
+        }
+        li {
+            float: left;
+        }
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            transition: 0.3s all ease-in;
+        }
+        li a:hover {
+            background-color: #111;
+            transition: 0.3s all ease-in;
+        }
         </style>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
