--- a/rgb-nicknames.html
+++ b/rgb-nicknames.html
@@ -15,12 +15,12 @@
             color: var(--font-color);
             padding: 25px;
         }
+        * {
+            font-family: 'Poppins', Helvetica, arial, sans-serif;
+        }
         .light-mode {
             background-color: white;
             color: black;
-        }
-        * {
-            font-family: 'Poppins', Helvetica, arial, sans-serif;
         }
         ul {
             list-style-type: none;
@@ -53,17 +53,18 @@
         </style>
         <script>
             function toggleLightMode() {
-                var element = document.body;
-                element.classList.toggle("light-mode");
-            }
+            var element = document.body;
+            element.classList.toggle("light-mode");
+        }
         </script>
     </head>
-<body>
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
-        <li><a href="./rgb-nicknames.html">Gradient Nickname Generator</a></li>
-        <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
-      </ul>
-</body>
+    <body>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
+            <li><a href="#">Gradient Nickname Generator</a></li>
+            <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
+          </ul>
+        <h1>Coming soon.</h1>
+    </body>
 </html>
