--- a/gradient-text.html
+++ b/gradient-text.html
@@ -145,7 +145,7 @@
         <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
-            <li><a href="#">Gradient Nickname Generator</a></li>
+            <li><a href="#">Gradient Text Generator</a></li>
             <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
           </ul>
           
@@ -165,7 +165,7 @@
         <label for="obfuscated"><s>strikethrough</s></label><br>
         <input type="checkbox" id="obfuscated">
         <label for="obfuscated">obfuscated</label><br><br>
-        <button onclick="resolveNick()">Generate Nick Command</button>
+        <button onclick="resolveNick()">Generate Gradient</button>
         <p id="cmd"></p>
         <canvas id="nick"></canvas>
     </body>
