--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <ul>
         <li><a href="#">Home</a></li>
         <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
-        <li><a href="./rgb-nicknames.html">Gradient Nickname Generator</a></li>
+        <li><a href="./gradient-text.html">Gradient Text Generator</a></li>
         <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
       </ul>
 </body>
