--- a/tab-animation.html
+++ b/tab-animation.html
@@ -144,7 +144,7 @@
         <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="#">Tab Animated Gradient Generator</a></li>
-            <li><a href="./rgb-nicknames.html">Gradient Nickname Generator</a></li>
+            <li><a href="./gradient-text.html">Gradient Text Generator</a></li>
             <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
           </ul>
         <center>
