--- a/gradient-text.html
+++ b/gradient-text.html
@@ -166,6 +166,7 @@
         <input type="checkbox" id="obfuscated">
         <label for="obfuscated">obfuscated</label><br><br>
         <button onclick="resolveNick()">Generate Gradient</button>
+        <p>Tip: You can use this code in essentials nicknames!</p><br>
         <p id="cmd"></p>
         <canvas id="nick"></canvas>
     </body>
