added transition to light mode toggle

--- a/gradient-text.html
+++ b/gradient-text.html
@@ -21,6 +21,7 @@
         .light-mode {
             background-color: white;
             color: black;
+            transition: 0.3s all ease-in;
         }
         ul {
             list-style-type: none;
