--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         .light-mode {
             background-color: white;
             color: black;
+            transition: 0.3s all ease-in;
         }
         * {
             font-family: 'Poppins', Helvetica, arial, sans-serif;
