--- a/tab-animation.html
+++ b/tab-animation.html
@@ -27,6 +27,7 @@
         .light-mode {
             background-color: white;
             color: black;
+            transition: 0.3s all ease-in;
         }
         ul {
             list-style-type: none;
