--- a/tab-animation.html
+++ b/tab-animation.html
@@ -17,6 +17,7 @@
         body {
             background-color: var(--bg-color);
             color: var(--font-color);
+            transition: 0.3s all ease-in;
             padding: 25px;
         }
         code {
