--- a/gradient-text.html
+++ b/gradient-text.html
@@ -13,6 +13,7 @@
         body {
             background-color: var(--bg-color);
             color: var(--font-color);
+            transition: 0.3s all ease-in;
             padding: 25px;
         }
         * {
