--- a/gradient-text.html
+++ b/gradient-text.html
@@ -150,7 +150,7 @@
             <li><a href="#">Gradient Text Generator</a></li>
             <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
           </ul>
-          
+          <center>
         <label>Text</label><br>
         <input id="text" type="text" placeholder="Text"><br><br>
         <label>First color</label><br>
@@ -171,5 +171,6 @@
         <p>Tip: You can use this code in essentials nicknames!</p><br>
         <p id="cmd"></p>
         <canvas id="nick"></canvas>
+    </center>
     </body>
 </html>
