fixed labels and wrong animation name, thanks @MasH

--- a/gradient-text.html
+++ b/gradient-text.html
@@ -151,20 +151,20 @@
             <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
           </ul>
           <center>
-        <label>Text</label><br>
+        <label for="text">Text</label><br>
         <input id="text" type="text" placeholder="Text"><br><br>
-        <label>First color</label><br>
+        <label for="color1">First color</label><br>
         <input id="color1" type="color" value="#771177"><br><br>
-        <label>Last color</label><br>
+        <label for="color2">Second color</label><br>
         <input id="color2" type="color" value="#710000"><br><br>
         <input type="checkbox" id="bold">
-        <label for="obfuscated"><b>bold</b></label><br>
+        <label for="bold"><b>bold</b></label><br>
         <input type="checkbox" id="italic">
-        <label for="obfuscated"><i>italic</i></label><br>
+        <label for="italic"><i>italic</i></label><br>
         <input type="checkbox" id="underlined">
-        <label for="obfuscated"><u>underlined</u></label><br>
+        <label for="underlined"><u>underlined</u></label><br>
         <input type="checkbox" id="strikethrough">
-        <label for="obfuscated"><s>strikethrough</s></label><br>
+        <label for="strikethrough"><s>strikethrough</s></label><br>
         <input type="checkbox" id="obfuscated">
         <label for="obfuscated">obfuscated</label><br><br>
         <button onclick="resolveNick()">Generate Gradient</button>
