added projects to nav etc

--- a/gradient-text.html
+++ b/gradient-text.html
@@ -148,6 +148,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
             <li><a href="#">Gradient Text Generator</a></li>
+            <li><a href="./projects.html">Projects</a></li>
             <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
           </ul>
           <center>
