--- a/projects.html
+++ b/projects.html
@@ -16,13 +16,13 @@
             transition: 0.3s all ease-in;
             padding: 25px;
         }
+        * {
+            font-family: 'Poppins', Helvetica, arial, sans-serif;
+        }
         .light-mode {
             background-color: white;
             color: black;
             transition: 0.3s all ease-in;
-        }
-        * {
-            font-family: 'Poppins', Helvetica, arial, sans-serif;
         }
         ul {
             list-style-type: none;
@@ -60,13 +60,19 @@
             }
         </script>
     </head>
-<body>
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
-        <li><a href="./gradient-text.html">Gradient Text Generator</a></li>
-        <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-      </ul>
-</body>
+    <body>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
+            <li><a href="#">Gradient Text Generator</a></li>
+            <li><a href="./projects.html">Projects</a></li>
+            <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
+          </ul>
+          <center>
+              <h1>Other projects</h1><br>
+              <p>
+                  <a href="./rRename.html">rRename</a><br>
+            </p>
+    </center>
+    </body>
 </html>
