--- a/tab-animation.html
+++ b/tab-animation.html
@@ -148,6 +148,7 @@
             <li><a href="#">Tab Animated Gradient Generator</a></li>
             <li><a href="./gradient-text.html">Gradient Text Generator</a></li>
             <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
+            <li><a href="./projects.html">Projects</a></li>
           </ul>
         <center>
             <h1>TAB Animated Gradient Generator</h1>
