added target="_blank" to 2 anchor links

--- a/rRename.html
+++ b/rRename.html
@@ -87,8 +87,8 @@
                       enabled: false
                       price: 50</code><br><br>
                       <h3>Links</h3>
-                      <p><a href="https://www.spigotmc.org/resources/rrename.88942/">SpigotMC page</a></p><br>
-                      <p><a href="https://github.com/starve-l/rRename">GitHub Repository</a></p>
+                      <p><a href="https://www.spigotmc.org/resources/rrename.88942/" target="_blank">SpigotMC page</a></p><br>
+                      <p><a href="https://github.com/starve-l/rRename" target="_blank">GitHub Repository</a></p>
     </center>
     </body>
 </html>
