updated rr page

--- a/tab-animation.html
+++ b/tab-animation.html
@@ -135,8 +135,8 @@
                 }
                 document.getElementById("code").innerHTML = desc;
                 document.getElementById("placeholder").innerHTML = placeholder;
-                hljs.highlightBlock(document.getElementById("code"))
-                hljs.highlightBlock(document.getElementById("placeholder"))
+                hljs.highlightBlock(document.getElementById("code"));
+                hljs.highlightBlock(document.getElementById("placeholder"));
             }
     
 
