fixed nav again lol

--- a/projects.html
+++ b/projects.html
@@ -64,8 +64,8 @@
         <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
-            <li><a href="#">Gradient Text Generator</a></li>
-            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="./gradient-text.html">Gradient Text Generator</a></li>
+            <li><a href="#">Projects</a></li>
             <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
           </ul>
           <center>
