--- a/tab-animation.html
+++ b/tab-animation.html
@@ -145,10 +145,11 @@
     <body>
         <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="#">Tab Animated Gradient Generator</a></li>
+            <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
             <li><a href="./gradient-text.html">Gradient Text Generator</a></li>
-            <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
+            <li><a href="./cosmonaut.html">Cosmonaut</a></li>
             <li><a href="./projects.html">Projects</a></li>
+            <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
           </ul>
         <center>
             <h1>TAB Animated Gradient Generator</h1>
