--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
     </head>
 <body>
     <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
         <li><a href="./gradient-text.html">Gradient Text Generator</a></li>
+        <li><a href="./cosmonaut.html">Cosmonaut</a></li>
         <li><a href="./projects.html">Projects</a></li>
         <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
       </ul>
