--- a/rRename.html
+++ b/rRename.html
@@ -70,7 +70,8 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
             <li><a href="./gradient-text.html">Gradient Text Generator</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="./cosmonaut.html">Cosmonaut</a></li>
+            <li><a href="./projects.html">Projects</a></li>
             <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
           </ul>
           <center>
