--- a/cosmonaut/done.html
+++ b/cosmonaut/done.html
@@ -70,9 +70,7 @@
         <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
       </ul>
       <center>
-        <img src="https://i.imgur.com/Hgiu4fW.png">
-        <h1><a href="https://discord.com/api/oauth2/authorize?client_id=799583165706010624&permissions=8&redirect_uri=https%3A%2F%2Fstarve-l.github.io%2Fcosmonaut%2Fdone&scope=bot">Invite link</a></h1><br>
-        <p><ol>Currency System</ol></p><br>
+        <h1>Thank you for inviting Cosmonaut!</h1>><br>
       </center>
 </body>
 </html>
