--- a/cosmonaut/done.html
+++ b/cosmonaut/done.html
@@ -70,7 +70,7 @@
         <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
       </ul>
       <center>
-        <h1>Thank you for inviting Cosmonaut!</h1>><br>
+        <h1>Thank you for inviting Cosmonaut!</h1><br>
       </center>
 </body>
 </html>
