--- a/cosmonaut.html
+++ b/cosmonaut.html
@@ -72,7 +72,14 @@
       <center>
         <img src="https://i.imgur.com/Hgiu4fW.png">
         <h1><a href="https://discord.com/api/oauth2/authorize?client_id=799583165706010624&permissions=8&redirect_uri=https%3A%2F%2Fstarve-l.github.io%2Fcosmonaut%2Fdone&scope=bot">Invite link</a></h1><br>
-        <p><ol>Currency System</ol></p><br>
-      </center>
+    </center>
+        <p>
+            <ol>-Currency System</ol><br>
+            <img src="">
+            <ol>-Reddit command</ol><br>
+            <img src="">
+            <ol>-Toggleable fancy welcome image</ol><br>
+            <img src="">
+        </p><br>
 </body>
 </html>
