--- a/cosmonaut.html
+++ b/cosmonaut.html
@@ -75,11 +75,11 @@
     </center>
         <p>
             <ol>-Currency System</ol><br>
-            <img src="">
+            <img src="https://i.imgur.com/Hgiu4fW.png">
             <ol>-Reddit command</ol><br>
             <img src="">
             <ol>-Toggleable fancy welcome image</ol><br>
-            <img src="">
+            <img src="https://i.imgur.com/9mdpHRg.png">
         </p><br>
 </body>
 </html>
