--- a/cosmonaut.html
+++ b/cosmonaut.html
@@ -74,11 +74,11 @@
         <h1><a href="https://discord.com/api/oauth2/authorize?client_id=799583165706010624&permissions=8&redirect_uri=https%3A%2F%2Fstarve-l.github.io%2Fcosmonaut%2Fdone&scope=bot">Invite link</a></h1><br>
     </center>
         <p>
-            <ol>-Currency System</ol><br>
-            <img src="https://i.imgur.com/Hgiu4fW.png">
-            <ol>-Reddit command</ol><br>
+            <ol>Currency System</ol><br>
+            <img src="https://i.imgur.com/UEh99ng.png">
+            <ol>Reddit command</ol><br>
             <img src="">
-            <ol>-Toggleable fancy welcome image</ol><br>
+            <ol>Toggleable fancy welcome image</ol><br>
             <img src="https://i.imgur.com/9mdpHRg.png">
         </p><br>
 </body>
