--- a/cosmonaut.html
+++ b/cosmonaut.html
@@ -79,7 +79,7 @@
             <ol>Reddit command</ol><br>
             <img src="">
             <ol>Toggleable fancy welcome image</ol><br>
-            <img src="https://i.imgur.com/9mdpHRg.png">
+            <img src="https://i.imgur.com/u8slAWj.png">
         </p><br>
 </body>
 </html>
