fixed image and hrefs

--- a/cosmonaut.html
+++ b/cosmonaut.html
@@ -62,11 +62,11 @@
     </head>
 <body>
     <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
-        <li><a href="./gradient-text.html">Gradient Text Generator</a></li>
-        <li><a href="./cosmonaut.html">Cosmonaut</a></li>
-        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./index">Home</a></li>
+        <li><a href="./tab-animation">Tab Animated Gradient Generator</a></li>
+        <li><a href="./gradient-text">Gradient Text Generator</a></li>
+        <li><a href="./cosmonaut">Cosmonaut</a></li>
+        <li><a href="./projects">Projects</a></li>
         <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
       </ul>
       <center>
@@ -77,7 +77,7 @@
             <ol>Currency System</ol><br>
             <img src="https://i.imgur.com/UEh99ng.png">
             <ol>Reddit command</ol><br>
-            <img src="">
+            <img src="https://i.imgur.com/L1T1PqO.png">
             <ol>Toggleable fancy welcome image</ol><br>
             <img src="https://i.imgur.com/u8slAWj.png">
         </p><br>
