--- a/gradient-text.html
+++ b/gradient-text.html
@@ -145,11 +145,11 @@
     </head>
     <body>
         <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
-            <li><a href="./gradient-text.html">Gradient Text Generator</a></li>
-            <li><a href="./cosmonaut.html">Cosmonaut</a></li>
-            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="./index">Home</a></li>
+            <li><a href="./tab-animation">Tab Animated Gradient Generator</a></li>
+            <li><a href="./gradient-text">Gradient Text Generator</a></li>
+            <li><a href="./cosmonaut">Cosmonaut</a></li>
+            <li><a href="./projects">Projects</a></li>
             <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
           </ul>
           <center>
