--- a/projects.html
+++ b/projects.html
@@ -62,17 +62,17 @@
     </head>
     <body>
         <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./tab-animation.html">Tab Animated Gradient Generator</a></li>
-            <li><a href="./gradient-text.html">Gradient Text Generator</a></li>
-            <li><a href="./cosmonaut.html">Cosmonaut</a></li>
-            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="./index">Home</a></li>
+            <li><a href="./tab-animation">Tab Animated Gradient Generator</a></li>
+            <li><a href="./gradient-text">Gradient Text Generator</a></li>
+            <li><a href="./cosmonaut">Cosmonaut</a></li>
+            <li><a href="./projects">Projects</a></li>
             <li><a onclick="toggleLightMode()">Toggle light mode</a></li>
           </ul>
           <center>
               <h1>Other projects</h1><br>
               <p>
-                  <a href="./rRename.html">rRename</a><br>
+                  <a href="./rRename">rRename</a><br>
             </p>
     </center>
     </body>
