fixed href again -_-

--- a/tab-animation.html
+++ b/tab-animation.html
@@ -144,7 +144,7 @@
     </head>
     <body>
         <ul>
-            <li><a href="./index">Home</a></li>
+            <li><a href="./">Home</a></li>
             <li><a href="./tab-animation">Tab Animated Gradient Generator</a></li>
             <li><a href="./gradient-text">Gradient Text Generator</a></li>
             <li><a href="./cosmonaut">Cosmonaut</a></li>
